kubernetes-home-ops/kubernetes/apps/ai/agentgateway/gateway/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.smadja.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: agentgateway-mcp
spec:
  parentRefs:
    - name: agentgateway-mcp
  rules:
    - backendRefs:
        - name: agentgateway-mcp
          group: agentgateway.dev
          kind: AgentgatewayBackend
